Stop root menu text from wrapping in some cases. (closes #57)

--- a/css/library.css
+++ b/css/library.css
@@ -432,6 +432,7 @@ body:not(.WindowFocus) ._39oUCO1OuizVPwcnnv88no ._3s0lkohH8wU2do0K1il28Y {
   position: relative !important;
   margin-top: 32px !important;
   left: -48px !important;
+  text-wrap: nowrap !important;
 }
 
 ._3s0lkohH8wU2do0K1il28Y > ._2UyOBeiSdBayaFdRa39N2O:hover {
